--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,4 +2,11 @@ html,
 body {
   padding: 0;
   margin: 0 100px;
+  font-family: monospace;
+}
+input {
+  padding: 4px 0px;
+  margin-left: 10px;
+  border: 2px solid #ccc;
+  border-radius: 2px;
 }
