--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -7,6 +7,7 @@
 .table {
   border-collapse: collapse;
   margin-bottom: 40px;
+  width: 100%;
 }
 .table td,
 .table th {
@@ -15,16 +16,24 @@
   padding: 2px 8px;
 }
 .search {
-  margin-bottom: 60px;
+  justify-self: self-start;
 }
 .inputSearch {
   margin-bottom: 20px;
 }
 .inputSearch input {
   margin-left: 0;
+  width: 220px;
+  display: block;
+  padding: 9px 4px 9px 40px;
+  background: transparent
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E")
+    no-repeat 13px center;
 }
 .addForm {
   display: flex;
+  width: 100%;
+  justify-content: space-around;
 }
 .addForm div {
   text-align: center;
@@ -35,16 +44,7 @@
   margin: 20px;
   display: flex;
 }
-.newButton {
-  background: #6654fd;
-  padding: 8px;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  align-self: center;
-  justify-self: self-end;
-  margin-bottom: 20px;
-}
+
 .slidecontainer {
   width: 100%;
 }
@@ -63,10 +63,67 @@
   margin: 0 10px;
 }
 .addContainer {
-  width: fit-content;
+  width: auto;
   border: 2px solid #ccc;
   margin-bottom: 40px;
 }
 .center {
   text-align: center;
+}
+.tooltip {
+  position: relative;
+  display: flex;
+  margin: 0 6px;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: #6654fd99;
+  color: #fff;
+  text-align: center;
+  border-radius: 4px;
+  padding: 2px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 1s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #6654fd99 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+.formContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.newButton {
+  background: #6654fd;
+  padding: 8px;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  align-self: center;
+  justify-self: self-end;
+  margin: 0 0px 20px 4px;
+}
+.newButton svg {
+  padding: 0 8px;
 }
