--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0 100px;
-  font-family: monospace;
+  font-family: sans-serif;
 }
 input {
   padding: 4px 0px;
